<resources>
    <string name="app_name">Instagram</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google_icon">Google Icon</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_github">Log in with GitHub</string>
    <string name="github_icon">GitHub Icon</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log in</string>
    <string name="instagram_or_facebook">Instagram or Facebook</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_get_back_into_your_account">Enter your email and we\'ll send you a link to get back into your account.</string>
    <string name="next">Next</string>
    <string name="back_to_log_in">Back to log in.</string>
    <string name="instagram_logo">Instagram logo</string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="finish">Finish</string>
    <string name="web_client_id">893185908089-s31084semslet4cd71461mj3kkmk0vp1.apps.googleusercontent.com</string>
    <string name="unable_to_log_in">Unable to log in</string>
    <string name="successful_log_in">Successful log in</string>
    <string name="unable_to_register">Unable to register</string>
    <string name="unable_to_send_email_to_reset_password">Unable to send email to reset password</string>
    <string name="ok">Ok</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="create_new_post">Create new post</string>
    <string name="select_location">Select location</string>
    <string name="description">Description</string>
    <string name="upload_post">Upload post</string>
    <string name="the_post_was_created_successfully">The post was created successfully!</string>

    <string name="all">All</string>
    <string name="user">User</string>
    <string name="location">Location</string>
    <string name="date_of_post">Date of post</string>
    <string name="no_filter">No Filter</string>
    <string name="blur">Blur</string>
    <string name="circle_crop">Circle Crop</string>
    <string name="sepia">Sepia</string>
    <string name="color">Color</string>
    <string name="grayscale">Grayscale</string>
    <string name="invert">Invert</string>
    <string name="kuwahara">Kuwahara</string>
    <string name="pixelation">Pixelation</string>
    <string name="sketch">Sketch</string>
    <string name="swirl">Swirl</string>
    <string name="toon">Toon</string>
    <string name="vignette">Vignette</string>
    <string name="brightness">Brightness</string>
    <string name="Red">Red</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="instagram_logo_cd">Instagram Logo</string>
    <string name="open_camera">Open Camera</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="go_back">Go back</string>
    <string name="selected_preview">Selected preview</string>
    <string name="edit">Edit</string>
    <string name="camera">Camera</string>
    <string name="no_location_selected">No location selected</string>
    <string name="selected_location">Selected location:</string>
    <string name="bookmark_icon">Bookmark icon</string>
    <string name="like_icon">Like icon</string>
    <string name="comment_icon">Comment icon</string>
    <string name="direct_message_icon">Direct message icon</string>
    <string name="post_image">Post image</string>
    <string name="liked_by">"Liked by "</string>
    <string name="and">" and "</string>
    <string name="others">others</string>
    <string name="search_icon">Search Icon</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="grant_permission">Grant permission</string>
    <string name="permission_required">Permission required</string>
    <string name="it_seems_you_permanently_declined_permission_to_access_images_and_videos">"It seems you permanently declined permission to access images and videos. "</string>
    <string name="you_can_go_to_the_app_settings_to_grant_it">You can go to the app settings to grant it.</string>
    <string name="this_app_needs_access_to_your_gallery_so_that_you_can_take_choose_pictures_to_upload_while_using_the_app">This app needs access to your gallery so that you can take choose pictures to upload while using the app.</string>
    <string name="it_seems_you_permanently_declined_camera_permission">"It seems you permanently declined camera permission. "</string>
    <string name="this_app_needs_access_to_your_camera_so_that_you_can_take_pictures_while_using_the_app">This app needs access to your camera so that you can take pictures while using the app.</string>
    <string name="it_seems_you_permanently_declined_microphone_permission">"It seems you permanently declined microphone permission. "</string>
    <string name="this_app_needs_access_to_your_microphone_so_that_your_friends_can_hear_you">This app needs access to your microphone so that your friends can hear you.</string>
    <string name="it_seems_you_permanently_declined_phone_calling_permission">"It seems you permanently declined phone calling permission. "</string>
    <string name="this_app_needs_phone_calling_permission_so_that_you_can_talk_to_your_friends">This app needs phone calling permission so that you can talk to your friends.</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="back_arrow">Back arrow</string>
    <string name="current_selection">Current selection:</string>
    <string name="no_subscription_selected">No subscription selected</string>
    <string name="instructions_sent_to_your_email">Instructions sent to your email!</string>
    <string name="request_email">Request email</string>
    <string name="free">FREE</string>
    <string name="pro">PRO</string>
    <string name="gold">GOLD</string>
    <string name="upload_limit_1gb_day_max_spend_10_photos">Upload limit: 10MB/day. Max spend: 10 photos.</string>
    <string name="upload_limit_10gb_day_max_spend_50_photos_price_9_99_month">Upload limit: 100MB/day. Max spend: 50 photos. Price: $9.99/month</string>
    <string name="upload_limit_100gb_day_max_spend_100_photos_price_24_99_month">Upload limit: 1GB/day. Max spend: 100 photos. Price: $24.99/month</string>
    <string name="verified_icon">Verified Icon</string>
    <string name="user_profile_image">User profile image</string>
    <string name="show_profile">Show profile</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_title">Confirm Deletion</string>
    <string name="confirm_delete_message">Are you sure you want to delete this post?</string>
    <string name="confirm_subscription_change">Confirm Subscription Change</string>
    <string name="your_subscription_settings">Your Subscription Settings</string>
    <string name="note_you_can_change_your_subscription_only_once_a_day_changes_will_take_effect_the_next_day">Note: You can change your subscription only once a day. Changes will take effect the next day.</string>
    <string name="note_subscription_changed_awaiting_confirmation">Note: Subscription changed, awaiting your confirmation</string>
    <string name="your_usage_statistics">Your Daily Usage Statistics</string>
    <string name="photos">" photos ("</string>
    <string name="usage_photos">Daily photo usage:</string>
    <string name="usage_mb">Daily storage usage:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
</resources>