...
            text = stringResource(R.string.trouble_logging_in),
            fontWeight = FontWeight.Bold,
            textAlign = TextAlign.Center,
            modifier = modifier
                .fillMaxWidth()
                .padding(top = 16.dp)
                .testTag("Trouble loggin in?"),
            color = textColor
        )

        Text(
            text = stringResource(R.string.enter_your_email_and_we_ll_send_you_a_link_to_get_back_into_your_account),
            textAlign = TextAlign.Center,
...
